src/objects/Call_List__c.object
<CustomObject>
    <fields>
        <fullName>Call_Script__c</fullName>
        <label>Call Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voicemail 1</fullName>
                </value>
                <value>
                    <fullName>Voicemail 2</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appointment</fullName>
                </value>
                <value>
                    <fullName>Has Current Appointment</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>Schedule Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Call__c</fullName>
        <formula>CASE( Disposition__c , 
&quot;Voicemail 1&quot;, &quot;Yes&quot;, 
&quot;Voicemail 2&quot;, &quot;No&quot;,
&quot;Scheduled Appointment&quot;, &quot;No&quot;,
&quot;Has Current Appointment&quot;, &quot;No&quot;,
&quot;Do Not Contact&quot;, &quot;No&quot;,
&quot;Unreachable&quot;, &quot;No&quot;,
&quot;Other - Drop from List&quot;, &quot;No&quot;,
&quot;Other - Keep on List&quot;, &quot;Yes&quot;,
&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Lists</relationshipLabel>
        <relationshipName>Call_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remove_From_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove From List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_Between_Calls__c</fullName>
        <label>Waiting Between Calls</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Patient__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Remove_From_List__c</columns>
        <columns>Waiting_Between_Calls__c</columns>
        <columns>Disposition__c</columns>
        <columns>Call_Script__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Call List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>